--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,5 +1,8 @@
 source "https://rubygems.org"
 
 gem "jekyll", "~> 4.3"
-gem "just-the-docs", "~> 0.10"
+gem "jekyll-remote-theme"
+gem "jekyll-feed"
+gem "jekyll-sitemap"
+gem "jekyll-paginate"
 gem "webrick", "~> 1.8"
