Switch to Just-the-Docs with Millennial-inspired styling
- Use just-the-docs theme with custom millennial color scheme
- Add custom.scss with clean, minimal aesthetic:
  - Centered content (800px max)
  - Subtle borders and navigation
  - Generous whitespace
  - Clean button styling
- Create hierarchical documentation:
  - Home, Getting Started, Notebooks (6 child pages)
  - Methodology, About
- Remove Millennial theme files (incompatible with documentation needs)

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,8 +1,5 @@
 source "https://rubygems.org"
 
 gem "jekyll", "~> 4.3"
-gem "jekyll-remote-theme"
-gem "jekyll-feed"
-gem "jekyll-sitemap"
-gem "jekyll-paginate"
+gem "just-the-docs", "~> 0.10"
 gem "webrick", "~> 1.8"
